--- a/public/css/main.css
+++ b/public/css/main.css
@@ -802,6 +802,10 @@ ul.dahs_navbar li a.active {
     color: var(--primary-color);
 }
 
+.dropify-wrapper .dropify-message p { 
+    font-size: initial;
+}
+
 .select2-container .select2-selection--single { 
     height: 42px; 
     padding: 6px;
@@ -811,6 +815,19 @@ ul.dahs_navbar li a.active {
 }
 .select2-container--default .select2-selection--single .select2-selection__arrow {
     height: 42px; 
+}
+.cart-counts, .wishlist-counts {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    color: #fff;
+    background: #ff7a68;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    font-size: 12px;
+    padding: 1px;
+    border-radius: 50px;
 }
 
 /* // X-Small devices (portrait phones, less than 576px)
