--- a/public/css/main.css
+++ b/public/css/main.css
@@ -80,7 +80,8 @@ footer ul li a:hover, .bs-wizard>.bs-wizard-step>.bs-wizard-dot:after {
 /* Header Css */
 header.header { 
     background-color: #fff; 
-    padding: 10px 20px;
+    padding: 10px 20px;    
+    z-index: 9999;
     transition: all .3s ease-in-out;
 }
 header.header.sticky { 
@@ -1117,6 +1118,70 @@ ul.card-tours-availbility-list {
 .form-control-remark {
     min-height: 50px !important;
 }
+
+/* Destination Filter Css */
+.filter-btn {
+    position: absolute;
+    top: 25px;
+    right: 0;
+}
+
+.form-option.form-check-inline {
+    margin-right: 0;
+}
+.form-check-input {
+    width: 1em;
+    height: 1em;
+    margin-top: 0.25em;
+    vertical-align: top;
+    background-color: #fff;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    border: 1px solid rgba(0,0,0,.25);
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    -webkit-print-color-adjust: exact;
+    color-adjust: exact;
+    print-color-adjust: exact;
+} 
+[type="checkbox"]:checked, [type="checkbox"]:not(:checked) {
+    position: absolute;
+    left: -9999px;
+}
+.form-check .form-check-input {
+    float: left;
+    margin-left: -1.5em;
+} 
+.form-option-label {
+    position: relative !important;
+    min-width: 2.2rem;
+    height: 2.2rem;
+    margin-bottom: 0;
+    padding-top: 0.0725rem;
+    padding-right: 0.475rem;
+    padding-left: 0.475rem !important;
+    transition: color .2s ease-in-out,border-color .2s ease-in-out;
+    border: 1px solid #e3e9ef;
+    border-radius: 0.25rem;
+    color: #4b566b;
+    font-size: .75rem;
+    font-weight: 500;
+    text-align: center;
+    line-height: 1.75rem !important;
+    cursor: pointer;
+}
+.form-check .form-option-label {
+    min-width: 100%;
+    height: 2rem;
+}
+.form-check-input:checked~.form-option-label {
+    border-color: #121212;
+    color: #121212;
+}
+
+
 
 
 
