--- a/public/css/main.css
+++ b/public/css/main.css
@@ -655,6 +655,8 @@ section.hero_in.tours{
 /* Tours Details Css */
 section.hero_in.tours_detail {
     height: 400px;
+    background-size: cover !important;
+    background-position: center center !important;
 } 
 .owl-nav button span.ti {
     font-size: 28px;
@@ -665,8 +667,7 @@ section#description, section#reviews, #also-likes, #tour_plan, #add_review, #tou
     border-bottom: 1px solid #ededed;
     margin-bottom: 30px;
     padding-bottom: 30px;
-}
-
+} 
 
 .trust-box img {
     width: 60px;
@@ -1192,14 +1193,37 @@ ul.card-tours-availbility-list {
 }
 .form-check .form-option-label {
     min-width: 100%;
-    height: 2rem;
+    height: auto;
+    
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: center;
+    align-items: center;
+}
+.form-check .form-option-label p {
+    line-height: 1.3;
+}
+.form-check .form-option-label img {
+    width: 32px;
+    margin-right: 3px;
 }
 .form-check-input:checked~.form-option-label {
     border-color: #121212;
     color: #121212;
 }
 
+.slick-next:before, .slick-prev:before {content: none;}
+.slick-next i, .slick-prev i {
+    font-size: 24px;
+    color: var(--primary-color); 
+}
 
+#review_summary { 
+    background-color: #32a067 !important;
+}
+.reviews-container .progress-bar {
+    background-color: var(--primary-color) !important;  
+}
 
 
 
