--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1190,7 +1190,7 @@ ul.card-tours-availbility-list {
     -moz-appearance: none;
     appearance: none;
     -webkit-print-color-adjust: exact;
-    color-adjust: exact;
+    /* color-adjust: exact; */
     print-color-adjust: exact;
 } 
 [type="checkbox"]:checked, [type="checkbox"]:not(:checked) {
