--- a/public/css/main.css
+++ b/public/css/main.css
@@ -151,7 +151,9 @@ header ul.top-right-area li select.form-currency.form-control, header ul.top-rig
     padding: 7px 0;
     height: auto;
 }
-
+a.wishlist_bt_top span.wishlist-counts {
+    display: none;
+}
 
 
 
@@ -216,15 +218,15 @@ header ul.top-right-area li select.form-currency.form-control, header ul.top-rig
     height: 100%;
     background: rgba(36, 75, 82, 0.1);
 }
- 
+
 .testimonial-box img {
     width: 100%;
     margin: 0;
 }
 .testimonial-box .content-box {
-    width: 35%;
+    width: 50%;
     position: absolute;
-    top: 40%;
+    top: 30%;
     right: 5%;
     z-index: 9;
     background-color: #fff;
@@ -1193,7 +1195,7 @@ ul.card-tours-availbility-list {
     /* color-adjust: exact; */
     print-color-adjust: exact;
 } 
-[type="checkbox"]:checked, [type="checkbox"]:not(:checked) {
+.form-check-input.searchType[type="checkbox"]:checked, .form-check-input.searchType[type="checkbox"]:not(:checked) {
     position: absolute;
     left: -9999px;
 }
