--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,10 +10,10 @@
 
 :root { 
     --body-font-family: Montserrat, Prompt, Tahoma, sans-serif;  
-    /* --primary-color: #f67b2d; 
-    --secondary-color: #dd6e27;  */
-    --primary-color: #f29b18; 
-    --secondary-color: #fa6352;
+    /* --primary-color: #fdce0a; 
+    --secondary-color: #ff5b00;  */
+    --primary-color: #fdce0a; 
+    --secondary-color: #ff5b00;
     --text-color: #4d4d5b;
 } 
 
